--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libblas-dev liblapack-dev gfortran libatlas-base-dev
       - name: Install uv
-        run: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v5
 
       - name: Install documentation dependencies
         run: uv sync --group docs
